force-app/main/default/objects/AUTH_MATRIX__x/AUTH_MATRIX__x.object-meta.xml
<CustomObject>
    <description>AUTH_MATRIX</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>AUTH_MATRIX</externalName>
    <label>認可マトリクス</label>
</CustomObject>