force-app/main/default/objects/AUTH_MATRIX__x/fields/access_kbn__c.field-meta.xml
<CustomField>
    <fullName>access_kbn__c</fullName>
    <description>access_kbn</description>
    <externalDeveloperName>access_kbn</externalDeveloperName>
    <label>access_kbn</label>
    <length>100</length>
    <type>Text</type>
</CustomField>