force-app/main/default/objects/AUTH_MATRIX__x/fields/auth_matrix_id__c.field-meta.xml
<CustomField>
    <fullName>auth_matrix_id__c</fullName>
    <description>auth_matrix_id</description>
    <externalDeveloperName>auth_matrix_id</externalDeveloperName>
    <label>auth_matrix_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>