force-app/main/default/objects/AUTH_MATRIX__x/fields/device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>device_mng_id__c</fullName>
    <description>device_mng_id</description>
    <externalDeveloperName>device_mng_id</externalDeveloperName>
    <label>device_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>