force-app/main/default/objects/AUTH_MATRIX__x/fields/func_mst_id__c.field-meta.xml
<CustomField>
    <fullName>func_mst_id__c</fullName>
    <description>func_mst_id</description>
    <externalDeveloperName>func_mst_id</externalDeveloperName>
    <label>func_mst_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>