force-app/main/default/objects/AUTH_MATRIX__x/fields/service_mst_id__c.field-meta.xml
<CustomField>
    <fullName>service_mst_id__c</fullName>
    <description>service_mst_id</description>
    <externalDeveloperName>service_mst_id</externalDeveloperName>
    <label>service_mst_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>